# mirror-generator

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  tests.cpp
src/lib/: STL.cpp  STL.hpp  display.cpp  display.hpp  math_utils.cpp  math_utils.hpp  mirror_draw.cpp  mirror_points.cpp  mirror_stuff.hpp  result.cpp  result.hpp
